magic number to prevent ui shift with font settings

--- a/wp-content/themes/special/src/css/user-settings.css
+++ b/wp-content/themes/special/src/css/user-settings.css
@@ -19,6 +19,7 @@ footer legend {
 
 fieldset.font-settings {
   gap: 1em;
+  min-width: 16em;
   padding: .5em 1em 1em;
 }
 
